# Codex-testnet

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  pyproject.toml  test.md
.github/workflows/: auto-commit.yml  ci.yml
docs/: CHANGELOG.md  CONTRIBUTING.md  architecture.md
scripts/: autocommit.sh
src/codex_testnet/: __init__.py  app.py  cli.py
tests/: test_app.py
