[project]
name = "codex-testnet"
version = "0.1.0"
description = "Starter project for structured commits and testing."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Codex Testnet" }]

[project.scripts]
codex-testnet = "codex_testnet.cli:main"

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
